Updated to Spring Boot 4.0RC1